# gemini-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: error_handling.rs  mock_gemini  verify_contract.rs
